--- a/src/style.css
+++ b/src/style.css
@@ -11,11 +11,11 @@ body,
   overflow: hidden;
 }
 
-canvas{
+canvas {
   touch-action: none;
 }
 
-.browser iframe{
+.browser iframe {
   width: 1024px;
   height: 620px;
   border: none;
@@ -24,7 +24,7 @@ canvas{
   background-color: white;
 }
 
-.browser-tab > button{
+.browser-tab > button {
   width: 100px;
   height: 40px;
   border-right: 5px;
@@ -36,4 +36,12 @@ canvas{
 .browser-tab > button.active {
   background-color: rgb(233, 106, 106);
   color: white;
+}
+
+.browser-tab > button > a {
+  color: white;
+}
+
+.browser-tab > button > a:hover {
+  color: black;
 }
