--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,11 @@ body,
   height: 100%;
   overflow: hidden;
 }
-
 canvas {
   touch-action: none;
 }
 
+/* Browser */
 .browser iframe {
   width: 1024px;
   height: 620px;
@@ -23,7 +23,6 @@ canvas {
   border-top-left-radius: 0px;
   background-color: white;
 }
-
 .browser-tab > button {
   width: 100px;
   height: 40px;
@@ -32,16 +31,13 @@ canvas {
   cursor: pointer;
   font-weight: 200;
 }
-
 .browser-tab > button.active {
   background-color: rgb(233, 106, 106);
   color: white;
 }
-
 .browser-tab > button > a {
   color: white;
 }
-
 .browser-tab > button > a:hover {
   color: black;
 }
