--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,22 @@ canvas {
   touch-action: none;
 }
 
+/* Scroll Icon */
+.scroll-container {
+  position: absolute;
+  background-color: rgba(236, 236, 236, 0);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+}
+.scroll-container > * {
+  color: rgba(255, 255, 255, 0.654);
+}
+
 /* Browser */
 .browser iframe {
   width: 1024px;
