Added board link and test styles

--- a/src/style.css
+++ b/src/style.css
@@ -41,3 +41,19 @@ canvas {
 .browser-tab > button > a:hover {
   color: black;
 }
+
+/* Board */
+.board-links-container {
+  height: 400px;
+  width: 500px;
+  background-color: red;
+  display: flex;
+}
+
+.board-link-container {
+  background-color: blue;
+}
+
+.board-link {
+  font-size: 50px;
+}
