--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 *,
 ::after,
@@ -11,6 +11,7 @@
 html,
 body,
 #root {
+  font-family: "Roboto", sans-serif;
   position: fixed;
   top: 0;
   left: 0;
@@ -118,7 +119,6 @@ a:hover {
   justify-items: center;
   align-items: center;
   row-gap: 16px;
-  font-family: "Inter", sans-serif;
   font-size: 14px;
   background: #ffffff;
   padding: 16px 24px;
