--- a/src/components/Overlay/SoundControl/style.css
+++ b/src/components/Overlay/SoundControl/style.css
@@ -1,13 +1,13 @@
 .control {
   position: absolute;
-  top: 35px;
+  top: 5px;
   right: 0;
   font-family: "Inter";
   font-weight: 400;
   line-height: 1em;
   letter-spacing: -0.01em;
   font-size: 12px;
-  transform: translate(-50px, 50px);
+  transform: translate(0, 50px);
   transform-origin: 100% 50%;
 }
 
