--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
 
 * {
-  /* cursor: none; */
+  cursor: none;
 }
 
 *,
@@ -162,7 +162,6 @@ a:hover {
 .play-icon {
   color: rgba(253, 46, 0, 0.695);
   font-size: 50px;
-  cursor: pointer;
 }
 
 .play-icon:hover {
