--- a/src/style.css
+++ b/src/style.css
@@ -135,17 +135,6 @@ a:hover {
   color: white;
 }
 
-.board-frame {
-  position: fixed !important;
-}
-
-.board-frame iframe {
-  width: 530px;
-  height: 1000px;
-  border: none;
-  background-color: bisque;
-}
-
 .loader-container {
   width: 100%;
   height: 100%;
@@ -173,4 +162,32 @@ a:hover {
 
 .play-btn:hover > svg {
   color: rgb(253, 30, 0);
+}
+
+.board-frame {
+  position: fixed !important;
+}
+
+.board {
+  width: 500px;
+  height: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Mansalva", cursive;
+  color: white;
+}
+
+.board-title {
+  font-size: 4rem;
+  margin: 40px;
+  border-radius: 30px;
+}
+.board-list {
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style-type: none;
 }
