--- a/src/components/Overlay/MobileNav/style.css
+++ b/src/components/Overlay/MobileNav/style.css
@@ -4,7 +4,7 @@
   top: 50%;
   right: 2.5%;
   transform: translateY(50%);
-  border-radius: 20px;
+  border-radius: 1rem;
   background: rgb(27, 33, 30);
   background: linear-gradient(
     132deg,
@@ -12,26 +12,26 @@
     rgba(25, 37, 30, 0.6) 100%
   );
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.125);
-  z-index: 10000;
+  z-index: 1000;
 }
 
 .mobile-nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 32px 16px;
-  row-gap: 48px;
+  margin: 2rem 1rem;
+  row-gap: 3rem;
 }
 
 .mobile-nav > ul {
   flex-direction: column;
   align-items: center;
-  row-gap: 24px;
+  row-gap: 1.5rem;
 }
 
 .mobile-nav > ul > li > button > svg {
-  height: 20px;
-  width: 20px;
+  height: 1rem;
+  width: 1rem;
 }
 
 /* For screens less than 700px */
