--- a/src/components/Overlay/SoundControl/style.css
+++ b/src/components/Overlay/SoundControl/style.css
@@ -2,13 +2,13 @@
   position: absolute;
   top: 100%;
   right: 0;
-  padding: 30px 0;
+  padding: 2rem 0;
   font-family: "Inter";
   font-weight: 400;
   line-height: 1em;
   letter-spacing: -0.01em;
   font-size: 12px;
-  transform: translate(0, 50px);
+  transform: translate(0, 3rem);
   transform-origin: 100% 50%;
 }
 
@@ -26,8 +26,8 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   background-color: rgb(164, 164, 164);
-  width: 25px;
-  height: 25px;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   transition: 0.3s ease-in-out;
 }
