--- a/src/components/Overlay/MobileNav/style.css
+++ b/src/components/Overlay/MobileNav/style.css
@@ -1,9 +1,9 @@
 .mobile-nav-overlay {
   display: none;
-  position: absolute;
-  top: 50%;
-  right: 2.5%;
-  transform: translateY(50%);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   border-radius: 1rem;
   background: rgb(27, 33, 30);
   background: linear-gradient(
@@ -17,21 +17,30 @@
 
 .mobile-nav {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin: 2rem 1rem;
+  margin: 1rem 2rem 2rem 2rem;
   row-gap: 3rem;
 }
 
 .mobile-nav > ul {
-  flex-direction: column;
+  width: 100%;
   align-items: center;
-  row-gap: 1.5rem;
+  justify-content: space-between;
 }
 
-.mobile-nav > ul > li > button > svg {
-  height: 1rem;
-  width: 1rem;
+.mobile-nav > ul:nth-of-type(2) {
+  width: 6rem;
+  justify-content: flex-end;
+}
+
+button.active > svg {
+  stroke: rgb(164, 164, 164);
+}
+
+svg {
+  height: 1.5rem;
+  width: 1.5rem;
+  stroke: rgb(120, 120, 120);
 }
 
 /* For screens less than 700px */
