--- a/src/components/Overlay/SectionDetails/style.css
+++ b/src/components/Overlay/SectionDetails/style.css
@@ -54,10 +54,13 @@
 
 /* For screens less than 700px */
 @media only screen and (max-width: 700px) {
+  .section-container {
+    width: 100%;
+  }
+
   .section-overlay {
-    left: 2.5%;
     row-gap: 2rem;
-    width: 75%;
+    width: 100%;
   }
 
   .section-text > h1 {
@@ -65,12 +68,12 @@
   }
 
   .section-text > p {
-    font-size: 1rem;
+    font-size: 1.15rem;
   }
 
   .section-btn {
-    column-gap: 1rem;
-    font-size: 1rem;
+    column-gap: 1.5rem;
+    font-size: 1.5rem;
   }
 }
 
